In an effort to make StarMath more complete, this update sets up XML documentation and more clearly arranges the functions.

--- a/StarMath/StarMath.csproj
+++ b/StarMath/StarMath.csproj
@@ -18,9 +18,11 @@
     <DebugType>full</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\StarMath.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,7 +36,6 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="output.cs" />
     <Compile Include="min max.cs" />
     <Compile Include="make extract.cs" />
     <Compile Include="add subtract multiply.cs" />
