Improved print command, wrote some overloads for integer arrays (still about a dozen NotImplementedExceptions), and tested multiplyCross for dimension 7 - which works but doesn't have much use.

--- a/StarMath/StarMath.csproj
+++ b/StarMath/StarMath.csproj
@@ -52,6 +52,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\StarMath.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
