--- a/StarMath/StarMath.csproj
+++ b/StarMath/StarMath.csproj
@@ -76,7 +76,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>bin\x86\Release\</OutputPath>
-    <DocumentationFile>bin\Release\StarMath.XML</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\StarMath.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x86</PlatformTarget>
@@ -98,7 +98,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <OutputPath>bin\x64\Release\</OutputPath>
-    <DocumentationFile>bin\Release\StarMath.XML</DocumentationFile>
+    <DocumentationFile>bin\x64\Release\StarMath.XML</DocumentationFile>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
