--- a/StarMath/StarMath.csproj
+++ b/StarMath/StarMath.csproj
@@ -40,6 +40,7 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="constants.cs" />
     <Compile Include="svd.cs" />
     <Compile Include="3D transforms.cs" />
     <Compile Include="add subtract multiply.cs" />
