modified config file

--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,14 @@
 # Name of your blog (this will show up at the top of your page and in the RSS feed)
-name: Sample Jekyll Blog
+name: StarMath Documentation Pages
 
 # Short description (goes below the title; it will also be used in the RSS feed)
-description: This is a sample Jekyll Blog.
+description: StarMath is an open-source .NET matrix library
 
 # Your name, as you want it to appear underneath each post and in the footer
-author: Your Name
+author: Matt Campbell
 
 # Your email if you want it to be linked on the contact page
-author_email: you@example.com
+author_email: matt.campbell@oregonstate.edu
 
 # The directory for category index pages. Change it to something else if
 # for example you want links like /categories/category1 instead of /category1
@@ -21,7 +21,7 @@ category_dir: /
 baseurl: 
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://yourdomain.com/
+url: http://designengrlab.github.io/StarMath/
 
 #### Under the Hood Stuff #####
 
