--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ category_dir: /
 # Note - if you enable this, and attempt to view your site locally you have to use the baseurl in your local path.
 # Example, you must use http://localhost:4000/path/to/blog
 #baseurl: /path/to/blog 
-baseurl: 
+baseurl: /StarMath
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-url: http://designengrlab.github.io/StarMath/
+url: http://designengrlab.github.io/StarMath
 
 #### Under the Hood Stuff #####
 
