--- a/StarMath/StarMath.csproj
+++ b/StarMath/StarMath.csproj
@@ -40,10 +40,11 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="multiply divide.cs" />
     <Compile Include="constants.cs" />
     <Compile Include="svd.cs" />
     <Compile Include="3D transforms.cs" />
-    <Compile Include="add subtract multiply.cs" />
+    <Compile Include="add subtract.cs" />
     <Compile Include="eigen.cs" />
     <Compile Include="find functions.cs" />
     <Compile Include="inversion transpose.cs" />
