a bunch of micro-optimizations

--- a/TestEXE for StarMath/TestEXE for StarMath.csproj
+++ b/TestEXE for StarMath/TestEXE for StarMath.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="alglib.net" Version="3.16.0" />
     <PackageReference Include="DotNumerics" Version="1.1.0" />
     <PackageReference Include="MathNet.Numerics" Version="4.9.0" />
