--- a/StarMath.NET Standard/StarMath.NET Standard.csproj
+++ b/StarMath.NET Standard/StarMath.NET Standard.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyVersion>1.0.17.0725</AssemblyVersion>
-    <FileVersion>1.0.17.0725</FileVersion>
-    <Version>1.0.17.0725</Version>
+    <AssemblyVersion>1.0.20.0204</AssemblyVersion>
+    <FileVersion>1.0.20.0204</FileVersion>
+    <Version>1.0.20.0204</Version>
     <Authors>Matt Campbell</Authors>
     <Company>Design Engineering Lab</Company>
     <PackageId>StarMath</PackageId>
@@ -19,4 +19,11 @@
     <AssemblyName>StarMath</AssemblyName>
     <RootNamespace>StarMathLib</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
